GNOME Bugzilla – Bug 725216
Broken culling
Last modified: 2014-02-26 14:01:31 UTC
I have been testing the wayland branch as X11 compositor and found that culling seems broken i.e we always queue redraws in response to damage events even for fully obscured windows. This does not happen in master. It seems that unobscured region is always empty. Test case: CLUTTER_SHOW_FPS=1 jhbuild run gnome-shell-wayland --replace .. Start glxgears ... should get 60fps move it down the stack (middle click on title bar) ... fps stays at 60. Do the same with gnome-shell (i.e not wayland) will get down to 4 fps for the second step. I didn't spot any major differences between the two file reading through the code but Jasper talked about something broken with stacking in that branch. If stacking isn't correct we won't get the unobscured regions right.
Created attachment 270386 [details] [review] window-actor: Fix culling At some point meta_window_actor_cull_out stopped calling meta_cullable_cull_out_children which caused the unobscured region to never be set for the stex.
Attachment 270386 [details] pushed as d858454 - window-actor: Fix culling